update anchors